# prowl

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/skills/add-mode/: SKILL.md
.claude/skills/review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ai-review.yml  ci.yml  pm-command.yml
agent/: __init__.py  ast_analyzer.py  base_client.py  celery_app.py  config_manager.py  dashboard.py  db.py  gemini_client.py  github_client.py  history_manager.py  jira_client.py  notifier.py  ollama_client.py  report_generator.py  review_agent.py  webhook_handler.py  worker.py
agent/prompts/: base_review.md  performance_review.md  security_review.md
agent/rag/: __init__.py  context_retriever.py  embedding_provider.py  vector_store.py
agent/static/: app.js  style.css
agent/templates/: index.html
docs/: API.md  ARCHITECTURE.md  ROADMAP.md
nginx/: nginx.conf
tests/: test_dashboard.py  test_github_client.py  test_jira_client.py  test_review_agent.py
